# fuzzel-rbw

./: .SRCINFO  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  PKGBUILD  README.md
pinentry-fuzzel/: Cargo.toml  pinentry-fuzzel.sh
pinentry-fuzzel/src/: main.rs
src/: command.rs  config.rs  constants.rs  fuzzel.rs  insert.rs  main.rs  rbw.rs  unlock.rs  utils.rs
src/checks/: health.rs
src/config/: constants.rs  default.rs  parser.rs  path.rs
src/fuzzel/: fuzzel.rs  popup.rs
src/rbw/: fetch.rs  get.rs  list.rs  unlock.rs  user.rs  vault.rs
src/structs/: entry.rs
src/utils/: json.rs  notify.rs  wtype.rs
src/utils/json/: from_json.rs
src/utils/notify/: notify.rs
