[package]
name = "fuzzel-rbw"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

[[bin]]
name = "frbw"
path = "src/main.rs"

[workspace]
members = [
	".",
	"pinentry-fuzzel",
]
